// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`table node A table whose first row becomes the header should preserve links inside cells 1`] = `
"<center>
{| class=\\"wikitable\\" style=\\"text-align: center;\\"
|-
! '''Jessy'''
[https://www.twitch.tv/jessy Twitch]
[https://www.kick.com/jessy Kick]
|-
| '''Jillyfish'''
[https://www.twitch.tv/jillyfish Twitch]
|}
</center>


"
`;

exports[`table node A table with a colspan header and background-color style should render correctly 1`] = `
"<center>
{| class=\\"wikitable\\" style=\\"text-align: center;\\"
|-
! colspan=\\"3\\" style=\\"background-color:#78ddeb;color:#000000\\" | <u>Team Saradomin</u>
|-
| [https://www.twitch.tv/purpp Purpp]
| [https://www.twitch.tv/potatohime Potatohime]
| [https://www.twitch.tv/mr_mammal Mr Mammal]
|}
</center>


"
`;

exports[`table node A table with all data cells should render correctly 1`] = `
"<center>
{| class=\\"wikitable\\" style=\\"text-align: center;\\"
|-
! Row 1 Col 1
! Row 1 Col 2
|-
| Row 2 Col 1
| Row 2 Col 2
|}
</center>


"
`;

exports[`table node A table with cells containing only ignored elements should render with empty content 1`] = `
"<center>
{| class=\\"wikitable\\" style=\\"text-align: center;\\"
|-
! header1
! header2
|-
| <!-- Unsupported tag: style -->
| visible content
|}
</center>


"
`;

exports[`table node A table with complex nested HTML should render correctly 1`] = `
"<center>
{| class=\\"wikitable\\" style=\\"text-align: center;\\"
|-
! Name
! Description
|-
| ''Item Name''
| Some '''bold''' and ''italic'' text with 
line breaks
|}
</center>


"
`;

exports[`table node A table with empty cells should render without errors 1`] = `
"<center>
{| class=\\"wikitable\\" style=\\"text-align: center;\\"
|-
! header1
! header2
|-
| 
| test
|-
| test
| 
|}
</center>


"
`;

exports[`table node A table with mixed content including unsupported tags should render 1`] = `
"<center>
{| class=\\"wikitable\\" style=\\"text-align: center;\\"
|-
! header1
! header2
|-
| '''bold'''
| content
|-
| test

| <!-- Unsupported tag: unsupported -->more content
|}
</center>


"
`;

exports[`table node A table with mixed th and td in rows should render correctly 1`] = `
"<center>
{| class=\\"wikitable\\" style=\\"text-align: center;\\"
|-
! Header 1
! Header 2
! Header 3
|-
! Row Header
| Data 1
| Data 2
|}
</center>


"
`;

exports[`table node A table with no thead should render 1`] = `
"<center>
{| class=\\"wikitable\\" style=\\"text-align: center;\\"
|-
! header1
! header2
|-
| test
| test
|}
</center>


"
`;

exports[`table node A table with row headers (<th> in table body) should render correctly 1`] = `
"<center>
{| class=\\"wikitable\\" style=\\"text-align: center;\\"
|-
! 
! EU
! UK
! US East
|-
! F2P
| 456, 455
| 498, 499
| 417, 648
|-
! Members
| 335, 384
| 380, 382
| 629, 630
|}
</center>


"
`;

exports[`table node A table with thead and tbody row headers should render correctly 1`] = `
"<center>
{| class=\\"wikitable\\" style=\\"text-align: center;\\"
|-
! Column 1
! Column 2
|-
! Row 1
| Value 1
|-
! Row 2
| Value 2
|}
</center>


"
`;

exports[`table node A table with thead should render 1`] = `
"<center>
{| class=\\"wikitable\\" style=\\"text-align: center;\\"
|-
! header1
! header2
|-
| test
| test
|-
| test
| test
|}
</center>


"
`;

exports[`table node A table with whitespace-only cells should render without errors 1`] = `
"<center>
{| class=\\"wikitable\\" style=\\"text-align: center;\\"
|-
! header1
! header2
|-
| 
| test
|-
| test
| 
|}
</center>


"
`;

exports[`table node should handle table cells with li elements without ul/ol wrapper 1`] = `
"<center>
{| class=\\"wikitable\\" style=\\"text-align: center;\\"
|-
! Creature
! Slayer Unlock Requirements
! Quantities
! Weightings
! Slayer Point Unlock
|-
| Gryphons
| 
* 51 Slayer
* Troubled Tortugans (45 Sailing required)
* 60 Combat (only relevant if your settings filter tasks by combat level)
| 
* Vannaka: 30 - 80
* Chaeldar: 60 - 100
* Nieve: 110 - 170
* Duradel: 100 - 210
| 
* Vannaka: 5
* Chaeldar: 5
* Nieve: 7
* Duradel: 7
| 
* Wings Spread - Allows Nieve and Duradel to assign Gryphon tasks. Costs 80 Slayer Points.
|}
</center>


"
`;

exports[`table node should handle tables with multiple tbody elements 1`] = `
"<center>
{| class=\\"wikitable\\" style=\\"text-align: center;\\"
|-
! Header 1
! Header 2
|-
| Row 1 Col 1
| Row 1 Col 2
|-
| Row 2 Col 1
| Row 2 Col 2
|}
</center>


"
`;
